--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       </header>
       
       <nav>
+        <div id="toggle-menu" class="toggle-menu"></div>
           <ul>
                           <li><a href="#">Inicio</a></li>
                           <li><a href="targetas.html">lugares</a></li>
@@ -105,5 +106,6 @@
       </footer>
       <script src="./js/modo.js"></script>
       <script src="./js/consola.js"></script>
+      <script src="./js/menu.js"></script>
 </body>
 </html>
