--- a/pagos.html
+++ b/pagos.html
@@ -14,7 +14,7 @@
 
     <nav>
         <ul>
-                        <li><a href="index1.html">Inicio</a></li>
+                        <li><a href="index.html">Inicio</a></li>
                         <li><a href="targetas.html">lugares</a></li>
                       
                         <li><a href="registro.html">iniciar secion</a></li>
@@ -130,6 +130,7 @@
           <h4>AGENCIA H.D</h4>
       
       </footer>
+      <script src="./js/menu.js"></script>
 
   </body>
   
