--- a/targetas.html
+++ b/targetas.html
@@ -36,7 +36,7 @@
 
     <nav>
       <ul>
-                      <li><a href="index1.html">Inicio</a></li>
+                      <li><a href="index.html">Inicio</a></li>
                       <li><a href="targetas.html">lugares</a></li>
                       <li><a href="registro.html">iniciar secion</a></li>
                       <li><a href="pagos.html">pagos</a></li>
@@ -189,6 +189,7 @@
   </footer>
 
   <script src="./js/modo.js"></script>
+  <script src="./js/menu.js"></script>
 </body>
 
 </html>
